--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "bugs": {
     "url": "https://github.com/meowtec/starry-starry-night/issues"
   },
+  "devDependencies": {
+    "coffee-script": "~1.8.0"
+  },
   "homepage": "https://github.com/meowtec/starry-starry-night"
 }
